<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MOTORS" Id="{16a50c5a-79ce-4927-aa8a-38fc0bc20c74}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MOTORS
VAR
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Axis_MAIN(sName:='MAIN');
Axis_SUPPLY(sNAme:='SUPPLY');
Axis_JACK1(sNAme:='JACK1');
Axis_JACK2(sNAme:='JACK2');
]]></ST>
    </Implementation>
    <LineIds Name="MOTORS">
      <LineId Id="3" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>